<resources>
    <string name="app_name">Contacts</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="college">College</string>
    <string name="gender">Gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_others">Others</string>
    <string name="save">Save</string>
    <string name="mobile">Mobile</string>
</resources>
